# timetable_suffa

./: .editorconfig  .env.example  .gitignore  .prettierignore  README.md  eslint.config.mjs  memory.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
backend/shared/: README.md
backend/worker-admin/: .dev.vars.example  package.json  wrangler.jsonc
backend/worker-api/: .dev.vars.example  package.json  wrangler.jsonc
contracts/openapi/: worker-admin.openapi.yaml  worker-api.openapi.yaml
docs/: overhaul-roadmap.md
docs/adr/: 0001-rewrite-decision.md
docs/notifications/: push-strategy.md
docs/operations/: beta-release-checklist.md  beta-support-runbook.md  request-budget-model.md  scale-runbook.md  worker-admin-runbook.md
docs/setup/: windows-bootstrap.md
docs/sprints/: README.md  sprint-0-environment-and-repo-reset.md  sprint-1-pdf-ingestion-prototype.md  sprint-2-backend-foundation.md  sprint-3-mobile-foundation.md  sprint-8-scale-to-2000-users.md  (+4 more)
scripts/: bootstrap-windows.ps1
tools/pdf_parser/: .env.example  README.md  pyproject.toml
tools/pdf_parser/docs/: manual-qa-report.md  parser-assumptions.md
tools/pdf_parser/fixtures/golden/: spring-2026-2026-04-26.json
tools/pdf_parser/sample_inputs/: README.md
tools/pdf_parser/schema/: timetable.schema.json
tools/pdf_parser/src/pdf_parser/: __init__.py  cli.py  parser.py  validation.py
tools/pdf_parser/src/pdf_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tools/pdf_parser/tests/: helpers.py  test_cli.py  test_parser_regression.py
(+75 files in other folders)
