[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-parser"
version = "0.1.0"
description = "Python parser workspace for timetable ingestion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.25.1",
  "PyMuPDF>=1.26.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
pdf-parser = "pdf_parser.cli:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
where = ["src"]
